need to fix auto height

--- a/Sidebar-with-side-content/index.html
+++ b/Sidebar-with-side-content/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
+  <title>Protfolio</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
+    crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -31,6 +33,9 @@
         <li><a class="active" href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#protfolio">Protfolio</a></li>
+        <li><a href="#service">Service</a></li>
+        <li><a href="#blog">Blog</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </div>
@@ -39,27 +44,129 @@
   <main class="page-wrapper">
     <div class="sub-page">
       <!----------- Home Section ----------->
-      <section class="page page-home current-page" id="home">
-        <h1>Home</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt inventore voluptates in, modi quisquam
-          ducimus repudiandae at excepturi numquam ratione expedita nisi debitis maiores, repellat, culpa id?
-          Asperiores, fuga omnis?</p>
+      <section class="d-flex page page-home current-page" id="home">
+        <div class="container align-self-center">
+          <div class="home-content">
+            <div class="personal-details text-center">
+              <h6 class="text-uppercase hello-text">Hello!World</h6>
+              <h1 class="text-uppercase name">
+                Mohammad Shamim
+              </h1>
+              <h4 class="text-uppercase designation">
+                Web Designer & Developer
+              </h4>
+              <ul>
+                <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                <li><a href=""><i class="fab fa-github"></i></a></li>
+                <li><a href=""><i class="fab fa-bitbucket"></i></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!------------- About Section ------------>
-      <section class="page page-about" id="about">
-        <h1>About</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt inventore voluptates in, modi quisquam
-          ducimus repudiandae at excepturi numquam ratione expedita nisi debitis maiores, repellat, culpa id?
-          Asperiores, fuga omnis?</p>
+      <section class="d-flex page page-about" id="about">
+        <div class="container align-self-center">
+          <div class="about-content text-center">
+            <div class="about-details">
+              <h2 class="text-capitlize">About</h2>
+              <p>
+                Lorem ipsum dolor sit
+                amet consectetur adipisicing elit.
+                Quaerat, tempore?
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
 
       <!------------ Protfolio ------------->
-      <section class="page page-protfolio" id="protfolio">
-        <h1>Protfolio</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt inventore voluptates in, modi quisquam
-          ducimus repudiandae at excepturi numquam ratione expedita nisi debitis maiores, repellat, culpa id?
-          Asperiores, fuga omnis?</p>
+      <section class="d-flex page page-protfolio" id="protfolio">
+        <div class="container align-self-center">
+          <div class="protfolio-content text-center">
+            <div class="protfolio-details">
+              <h2 class="text-capitalize">protfolio</h2>
+              <p>
+                Lorem ipsum dolor sit
+                amet consectetur adipisicing elit.
+                Quaerat, tempore?
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!------------ Service ------------->
+      <section class="d-flex page page-service" id="service">
+        <div class="container align-self-center">
+          <div class="service-content">
+            <div class="service-header text-center">
+              <h2 class="text-capitalize">Service</h2>
+            </div>
+            <div class="service-details">
+              <div class="row">
+                <div class="col-12 col-md-6 col-lg-4">
+                  <div class="service-box">
+                  </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                  <div class="service-box">
+                  </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                  <div class="service-box">
+                  </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                  <div class="service-box">
+                  </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                  <div class="service-box">
+                  </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                  <div class="service-box">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!--------------- Blog --------------->
+      <section class="d-flex page page-blog" id="blog">
+        <div class="container align-self-center">
+          <div class="blog-content text-center">
+            <div class="blog-details">
+              <h2 class="text-capitalize">blog</h2>
+              <p>
+                Lorem ipsum dolor sit
+                amet consectetur adipisicing elit.
+                Quaerat, tempore?
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!--------------- Contact --------------->
+      <section class="d-flex page page-contact" id="contact">
+        <div class="container align-self-center">
+          <div class="contact-content text-center">
+            <div class="contact-details">
+              <h2 class="text-capitalize">Contact</h2>
+              <p>
+                Lorem ipsum dolor sit
+                amet consectetur adipisicing elit.
+                Quaerat, tempore?
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
     </div>
   </main>
