fixed auto height at positioned page

--- a/Sidebar-with-side-content/index.html
+++ b/Sidebar-with-side-content/index.html
@@ -27,7 +27,7 @@
   <div class="menu-area">
     <nav class="nav-menu">
       <div class="logo">
-        <h4>Protfolio</h4>
+        <a href="" class="logo-link">Protfolio</a>
       </div>
       <ul>
         <li><a class="active" href="#home">Home</a></li>
@@ -44,51 +44,59 @@
   <main class="page-wrapper">
     <div class="sub-page">
       <!----------- Home Section ----------->
-      <section class="d-flex page page-home current-page" id="home">
-        <div class="container align-self-center">
-          <div class="home-content">
-            <div class="personal-details text-center">
-              <h6 class="text-uppercase hello-text">Hello!World</h6>
-              <h1 class="text-uppercase name">
-                Mohammad Shamim
-              </h1>
-              <h4 class="text-uppercase designation">
-                Web Designer & Developer
-              </h4>
-              <ul>
-                <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href=""><i class="fab fa-twitter"></i></a></li>
-                <li><a href=""><i class="fab fa-instagram"></i></a></li>
-                <li><a href=""><i class="fab fa-github"></i></a></li>
-                <li><a href=""><i class="fab fa-bitbucket"></i></a></li>
-              </ul>
+      <section class="page page-home current-page" id="home">
+        <div class="d-flex page-content">
+          <div class="container align-self-center">
+            <div class="home-content">
+              <div class="personal-details text-center">
+                <h6 class="text-uppercase hello-text">Hello!World</h6>
+                <h1 class="text-uppercase name">
+                  Mohammad Shamim
+                </h1>
+                <h4 class="text-uppercase designation">
+                  Web Designer & Developer
+                </h4>
+                <ul>
+                  <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                  <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                  <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                  <li><a href=""><i class="fab fa-github"></i></a></li>
+                  <li><a href=""><i class="fab fa-bitbucket"></i></a></li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
       </section>
 
       <!------------- About Section ------------>
-      <section class="d-flex page page-about" id="about">
-        <div class="container align-self-center">
-          <div class="about-content text-center">
-            <div class="about-details">
-              <h2 class="text-capitlize">About</h2>
-              <p>
-                Lorem ipsum dolor sit
-                amet consectetur adipisicing elit.
-                Quaerat, tempore?
-              </p>
+      <section class="page page-about" id="about">
+        <div class="d-flex page-content">
+          <div class="container align-self-center">
+            <div class="about-content">
+              <div class="page-title">
+                <h1 class="title-text">About Me</h1>
+              </div>
+              <div class="about-details">
+                <p>
+                  Lorem ipsum dolor sit
+                  amet consectetur adipisicing elit.
+                  Quaerat, tempore?
+                </p>
+              </div>
             </div>
           </div>
         </div>
       </section>
 
       <!------------ Protfolio ------------->
-      <section class="d-flex page page-protfolio" id="protfolio">
-        <div class="container align-self-center">
-          <div class="protfolio-content text-center">
-            <div class="protfolio-details">
-              <h2 class="text-capitalize">protfolio</h2>
+      <section class="page page-protfolio" id="protfolio">
+        <div class="d-flex page-content">
+          <div class="container align-self-center">
+            <div class="protfolio-content text-center">
+              <div class="page-title">
+                <h2 class="title-text">protfolio</h2>
+              </div>
               <p>
                 Lorem ipsum dolor sit
                 amet consectetur adipisicing elit.
@@ -99,36 +107,38 @@
         </div>
       </section>
       <!------------ Service ------------->
-      <section class="d-flex page page-service" id="service">
-        <div class="container align-self-center">
-          <div class="service-content">
-            <div class="service-header text-center">
-              <h2 class="text-capitalize">Service</h2>
-            </div>
-            <div class="service-details">
-              <div class="row">
-                <div class="col-12 col-md-6 col-lg-4">
-                  <div class="service-box">
+      <section class="page page-service" id="service">
+        <div class="d-flex page-content">
+          <div class="container align-self-center">
+            <div class="service-content">
+              <div class="page-title text-center">
+                <h1 class="title-text">Service</h1>
+              </div>
+              <div class="service-details">
+                <div class="row">
+                  <div class="col-12 col-md-6 col-lg-4">
+                    <div class="service-box">
+                    </div>
                   </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                  <div class="service-box">
+                  <div class="col-12 col-md-6 col-lg-4">
+                    <div class="service-box">
+                    </div>
                   </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                  <div class="service-box">
+                  <div class="col-12 col-md-6 col-lg-4">
+                    <div class="service-box">
+                    </div>
                   </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                  <div class="service-box">
+                  <div class="col-12 col-md-6 col-lg-4">
+                    <div class="service-box">
+                    </div>
                   </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                  <div class="service-box">
+                  <div class="col-12 col-md-6 col-lg-4">
+                    <div class="service-box">
+                    </div>
                   </div>
-                </div>
-                <div class="col-12 col-md-6 col-lg-4">
-                  <div class="service-box">
+                  <div class="col-12 col-md-6 col-lg-4">
+                    <div class="service-box">
+                    </div>
                   </div>
                 </div>
               </div>
@@ -138,11 +148,13 @@
       </section>
 
       <!--------------- Blog --------------->
-      <section class="d-flex page page-blog" id="blog">
-        <div class="container align-self-center">
-          <div class="blog-content text-center">
-            <div class="blog-details">
-              <h2 class="text-capitalize">blog</h2>
+      <section class="page page-blog" id="blog">
+        <div class="d-flex page-content">
+          <div class="container align-self-center">
+            <div class="blog-content text-center">
+              <div class="page-title">
+                <h2 class="title-text">blog</h2>
+              </div>
               <p>
                 Lorem ipsum dolor sit
                 amet consectetur adipisicing elit.
@@ -154,11 +166,13 @@
       </section>
 
       <!--------------- Contact --------------->
-      <section class="d-flex page page-contact" id="contact">
-        <div class="container align-self-center">
-          <div class="contact-content text-center">
-            <div class="contact-details">
-              <h2 class="text-capitalize">Contact</h2>
+      <section class="page page-contact" id="contact">
+        <div class="d-flex page-content">
+          <div class="container align-self-center">
+            <div class="contact-content text-center">
+              <div class="page-title">
+                <h2 class="title-text">Contact</h2>
+              </div>
               <p>
                 Lorem ipsum dolor sit
                 amet consectetur adipisicing elit.
