--- a/Portfolio-Card-With-Direction-Aware-Effect/index.html
+++ b/Portfolio-Card-With-Direction-Aware-Effect/index.html
@@ -8,38 +8,38 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="protfolio-item-content">
-        <div class="protfolio-item">
-            <img src="img/protfolio1.jpg" alt="protfolio image">
+    <div class="portfolio-item-content">
+        <div class="portfolio-item">
+            <img src="img/protfolio1.jpg" alt="portfolio image">
             <div class="overlay">
                 <h1>Text</h1>
             </div>
         </div>
-        <div class="protfolio-item">
-            <img src="img/owner.jpg" alt="protfolio image">
+        <div class="portfolio-item">
+            <img src="img/owner.jpg" alt="portfolio image">
             <div class="overlay">
                 <h1>Text</h1>
             </div>
         </div>
-        <div class="protfolio-item">
-            <img src="img/protfolio1.jpg" alt="protfolio image">
+        <div class="portfolio-item">
+            <img src="img/protfolio1.jpg" alt="portfolio image">
             <div class="overlay">
                 <h1>Text</h1>
             </div>
         </div>
-        <div class="protfolio-item">
-            <img src="img/owner.jpg" alt="protfolio image">
+        <div class="portfolio-item">
+            <img src="img/owner.jpg" alt="portfolio image">
             <div class="overlay">
                 <h1>Text</h1>
             </div>
         </div>
-        <div class="protfolio-item">
-            <img src="img/protfolio1.jpg" alt="protfolio image">
+        <div class="portfolio-item">
+            <img src="img/protfolio1.jpg" alt="portfolio image">
             <div class="overlay">
                 <h1>Text</h1>
             </div>
         </div>
-        <div class="protfolio-item">
+        <div class="portfolio-item">
             <img src="img/owner.jpg" alt="protfolio image">
             <div class="overlay">
                 <h1>Text</h1>
@@ -51,7 +51,7 @@
     <script src="js/snake.min.js"></script>
     <script>
         $(document).ready(function() {
-            $(".protfolio-item").snakeify({
+            $(".portfolio-item").snakeify({
                 speed: 200
             });
         });
