--- a/Image-View-With-Input-File/index.html
+++ b/Image-View-With-Input-File/index.html
@@ -15,7 +15,7 @@
             Change Image
         </div>
         <div class="file-input">
-            <input onchange="readURL(this)" id="realFile" type="file" multiple/>
+            <input onchange="readURL(this)" id="realFile" type="file"  accept="image/*"/>
         </div>
     </div>
     <script src="js/main.js"></script>
